@@ -2,6 +2,8 @@ package com.school.torconfigtool.controllers;
 
 import com.school.torconfigtool.models.TorConfiguration;
 import com.school.torconfigtool.service.TorConfigurationService;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
@@ -23,11 +25,14 @@ import java.util.Map;
 public class OnionServiceController {
 
     private final TorConfigurationService torConfigurationService;
+    private static final Logger logger = LoggerFactory.getLogger(OnionServiceController.class);
 
     @Autowired
     public OnionServiceController(TorConfigurationService torConfigurationService) {
         this.torConfigurationService = torConfigurationService;
     }
+
+    private static final String TORRC_DIRECTORY_PATH = "torrc/onion/";
 
     @GetMapping
     public String onionServiceConfigurationForm(Model model) {
@@ -43,6 +48,7 @@ public class OnionServiceController {
 
         model.addAttribute("onionConfigs", onionConfigs);
         model.addAttribute("hostnames", hostnames);
+
         return "relay-config"; // The name of the Thymeleaf template to render
     }
 
@@ -56,75 +62,71 @@ public class OnionServiceController {
     @PostMapping("/configure")
     public String configureOnionService(@RequestParam int onionServicePort, Model model) {
         try {
-            // Define the path to the torrc file for the onion service
-            String torrcFileName = "local-torrc-onion" + onionServicePort;
-            String torrcFilePath = "torrc/onion/" + torrcFileName;
-
-            // Check if the torrc file exists, create it if not
+            String torrcFilePath = TORRC_DIRECTORY_PATH + "local-torrc-onion" + onionServicePort;
             if (!new File(torrcFilePath).exists()) {
                 createTorrcFile(torrcFilePath, onionServicePort);
             }
-
             model.addAttribute("successMessage", "Tor Onion Service configured successfully!");
-        } catch (Exception e) {
-            e.printStackTrace();
+        } catch (IOException e) {
+            logger.error("Error configuring Tor Onion Service", e);
             model.addAttribute("errorMessage", "Failed to configure Tor Onion Service.");
         }
-
-        return "relay-config"; // Redirect to the configuration page
+        return "relay-config";
     }
 
     @PostMapping("/start")
     public String startOnionService(Model model) {
-        // Configure and start the Tor Onion Service
-
-        // You can call the TorOnionServiceConfigurator.configureTorOnionService() method here
-        // to configure the Onion Service based on the previously created torrc file.
-
         boolean startSuccess = startTorOnionService();
-
         if (startSuccess) {
             model.addAttribute("successMessage", "Tor Onion Service started successfully!");
         } else {
             model.addAttribute("errorMessage", "Failed to start Tor Onion Service.");
         }
-
-        return "relay-config"; // Redirect to the configuration page
+        return "relay-config";
     }
 
     private boolean startTorOnionService() {
         try {
-            // Execute a command to start the Tor Onion Service
-            Process process = Runtime.getRuntime().exec("sudo systemctl start tor");
+            ProcessBuilder processBuilder = new ProcessBuilder("sudo", "systemctl", "start", "tor");
+            Process process = processBuilder.start();
 
             // Wait for the process to complete
             int exitCode = process.waitFor();
 
             // Check the exit code to determine if the start was successful
             return exitCode == 0;
-        } catch (Exception e) {
-            e.printStackTrace();
+        } catch (IOException | InterruptedException e) {
+            logger.error("Error starting Tor Onion Service", e);
             // Log and handle any exceptions that occur during the start
             return false;
         }
     }
 
     private void createTorrcFile(String filePath, int onionServicePort) throws IOException {
-        try (BufferedWriter torrcWritter = new BufferedWriter(new FileWriter(filePath))) {
+        File torrcFile = new File(filePath);
+
+        // Check if the parent directories exist; if not, attempt to create them
+        if (!torrcFile.getParentFile().exists() && !torrcFile.getParentFile().mkdirs()) {
+            throw new IOException("Failed to create parent directories for: " + filePath);
+        }
+
+        try (BufferedWriter torrcWriter = new BufferedWriter(new FileWriter(torrcFile))) {
             String currentDirectory = System.getProperty("user.dir");
             String hiddenServiceDirs = currentDirectory + "/onion/hiddenServiceDirs";
 
             File wwwDir = new File(currentDirectory + "/onion/www");
-            if (!wwwDir.exists()) {
-                wwwDir.mkdirs();
+            if (!wwwDir.exists() && !wwwDir.mkdirs()) {
+                throw new IOException("Failed to create directory: " + wwwDir.getAbsolutePath());
             }
 
             File serviceDir = new File(wwwDir, "service-" + onionServicePort);
-            serviceDir.mkdirs();
+            if (!serviceDir.exists() && !serviceDir.mkdirs()) {
+                throw new IOException("Failed to create directory: " + serviceDir.getAbsolutePath());
+            }
 
-            torrcWritter.write("HiddenServiceDir " + hiddenServiceDirs + "/onion-service-" + onionServicePort + "/");
-            torrcWritter.newLine();
-            torrcWritter.write("HiddenServicePort " + onionServicePort + " 127.0.0.1:" + onionServicePort);
+            torrcWriter.write("HiddenServiceDir " + hiddenServiceDirs + "/onion-service-" + onionServicePort + "/");
+            torrcWriter.newLine();
+            torrcWriter.write("HiddenServicePort " + onionServicePort + " 127.0.0.1:" + onionServicePort);
 
             File indexHtml = new File(serviceDir, "index.html");
             try (BufferedWriter writer = new BufferedWriter(new FileWriter(indexHtml))) {
